# Shocker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  controller.cpp  controller.h  events.cpp  events.h  main.cpp  main.py  mainGUI.cpp  parser.cpp  parser.h  vinput.cpp  vinput.h
.cmake/api/v1/reply/: cache-v2-59e84549a2d662f9af24.json  cmakeFiles-v1-a2dac8ad2131f6e63955.json  codemodel-v2-d560006f8f4e094100b1.json  directory-src-Debug-5baa3f56a882d03641a9.json  index-2022-04-04T23-48-15-0924.json  target-NewShocker-Debug-3a0addbba9395c0ca34f.json  target-Shocker-Debug-b199b850c02bea1f86ad.json
icon/: Shocker.desktop
key_codes/: keys.json  keys.k
profiles/: default.json  profile1.pf  text.json
src/: Action.cpp  CMakeLists.txt  Controller.cpp  ControllerInputReader.cpp  EventConverter.cpp  EventManager.cpp  JsonMapper.cpp  main.cpp
src/include/: Action.h  Controller.h  ControllerInputReader.h  EventConverter.h  EventManager.h  Exception.h  JsonMapper.h  Shocker.h
